# envirohack-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: inference.ipynb
sed_demo/: app.py  sound_event_detection.py  utils.py
